# keep-up-with

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  template.md
.github/workflows/: ci.yml  publish.yml
evals/: run.py
evals/cases/scenario_filter_all_noise/: case.toml  events.json
evals/cases/scenario_filter_mixed_tools/: case.toml  events.json
evals/cases/scenario_startup/: case.toml
evals/cases/scenario_story_thread_glm52/: case.toml  events.json
evals/cases/scenario_trend_thread_html_outputs/: case.toml  events.json
evals/cases/unit_ai_explained_fable_video/: case.toml  events.json
evals/cases/unit_claude_lazy_senior_dev_mode/: case.toml  events.json
evals/cases/unit_claude_opus_malware_repo/: case.toml  events.json
evals/cases/unit_coralboard_gemma_on_device/: case.toml  events.json
evals/cases/unit_deepswe/: case.toml  events.json  expected.md
evals/cases/unit_diffusiongemma/: case.toml  events.json
evals/cases/unit_etsy_talk/: case.toml  events.json
evals/cases/unit_fable_dc_reporters/: case.toml  events.json
evals/cases/unit_frontiercode/: case.toml  events.json
evals/cases/unit_iroh_1_0/: case.toml  events.json
evals/cases/unit_loopcraft/: case.toml  events.json
evals/cases/unit_open_knowledge_format/: case.toml  events.json
evals/cases/unit_openwa_whatsapp_gateway/: case.toml  events.json
evals/cases/unit_orca_fable_split/: case.toml  events.json
evals/cases/unit_reddit_multi_tool_split/: case.toml  events.json
evals/cases/unit_retired_phone_compute/: case.toml  events.json
evals/cases/unit_vercel_ai_sdk_harnesses/: case.toml  events.json
evals/cases/unit_zvec_trending/: case.toml  events.json
references/: design.md  render.html  visual-kit.css  visual-kit.js  visuals.md
(+133 files in other folders)
