[project]
name = "keep-up-with"
version = "0.1.0"
description = "Codex runtime support for monitoring sources and keeping up with topics."
requires-python = ">=3.13"
dependencies = [
    "browser-history>=0.5.0",
    "discord.py>=2.7.1",
    "httpx>=0.28.1",
    "isodate>=0.7.2",
    "markitdown[pdf]>=0.1.6",
    "praw>=7.8.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tomli-w>=1.2.0",
    "typer>=0.25.1",
    "websocket-client>=1.9.0",
    "yt-dlp>=2024.8.6",
]

[project.scripts]
kuw = "keep_up_with.cli.user.main:app"
cli = "keep_up_with.cli.agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keep_up_with"]

[tool.hatch.build.targets.wheel.force-include]
"src/keep_up_with/core/presets/ai.toml" = "keep_up_with/core/presets/ai.toml"
