[project]
name = "keep-up-with"
version = "0.1.0"
description = "Turn Codex into your personal 24/7 assistant for staying on top of the latest developments."
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "browser-history>=0.5.0",
    "discord.py>=2.7.1",
    "httpx>=0.28.1",
    "isodate>=0.7.2",
    "markitdown[pdf]>=0.1.6",
    "pillow>=12.2.0",
    "praw>=7.8.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tomli-w>=1.2.0",
    "typer>=0.25.1",
    "websocket-client>=1.9.0",
    "yt-dlp>=2024.8.6",
]

[project.scripts]
kup = "keep_up_with.cli.user.main:app"
kup-cli = "keep_up_with.cli.agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keep_up_with"]
